<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgdialog"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:background="@drawable/button_settings_custom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textBold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/error"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/no_city"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_weight="1"
            android:ems="10"
            android:scaleType="fitXY"
            android:src="@drawable/line_cray" />

        <Button
            android:id="@+id/dialogButtonOK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="#FF007AFF"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>