<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cityText"
                style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/condIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/condDescr"
                style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/mainLayout"
        android:layout_marginBottom="30dp"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="80dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/Ltemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-20dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/temp"
                    style="@style/ShadowText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="130sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/ShadowText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/ShadowText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/textView1"
                        android:text="@string/today"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            style="@style/ShadowText"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/ShadowText"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>
                </RelativeLayout>

                <ImageView
                    android:id="@+id/ImageView01"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:scaleType="fitXY"
                    android:src="@drawable/line" />

                <com.devsmart.android.ui.HorizontalListView
                    android:id="@+id/listview"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center" >

                </com.devsmart.android.ui.HorizontalListView>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:scaleType="fitXY"
                    android:src="@drawable/line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="@android:color/transparent"
                    android:clickable="false"
                    android:divider="@color/transparent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:listSelector="@android:color/transparent"
                    android:longClickable="false"
                    android:scrollbars="none" >
                </ListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ImageView03"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:scaleType="fitXY"
                    android:src="@drawable/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/ShadowText"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ImageView02"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:scaleType="fitXY"
                    android:src="@drawable/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunrise"
                            android:textColor="@color/white"
                            style="@style/ShadowText"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/white"
                            style="@style/ShadowText"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunset"
                            android:textColor="@color/white"
                            style="@style/ShadowText"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/white"
                            style="@style/ShadowText"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textColor="@color/white"
                            style="@style/ShadowText"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/hum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/white"
                            style="@style/ShadowText"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/WindLayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textColor="@color/white"
                            style="@style/ShadowText"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/windSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/white"
                            style="@style/ShadowText"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textColor="@color/white"
                            style="@style/ShadowText"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/press"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            style="@style/ShadowText"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/line" />

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="15dp"
                android:layout_height="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/update" />

            <Button
                android:id="@+id/button2"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_menu" />
        </RelativeLayout>
    </LinearLayout>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/top_bar" />

</RelativeLayout>